--- a/FE/public/index.html
+++ b/FE/public/index.html
@@ -43,7 +43,7 @@ window.smartsupp||(function(d) {
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Fintch | Be early to the future of finance</title>
+  <title>Token Trade | Be early to the future of finance</title>
 </head>
 
 <body>
